# purl2repo

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  integration.yml  publish-pypi.yml  publish-testpypi.yml
docs/: api.md  architecture.md  cli.md  development.md  ecosystems.md  migration.md  purls.md  release-process.md  scoring.md
docs/releases/: v2.0.0.md  v2.0.1.md  v2.0.2.md
purl2repo/: __init__.py  base_parser.py  cargo_parser.py  manager_registry.py  maven_parser.py  npm_parser.py  pypi_parser.py
purl2repo/scraper/: __init__.py  scraper.py  url_validator.py
purl2repo/scraper/vcs_handlers/: __init__.py  bitbucket_handler.py  github_handler.py  gitlab_handler.py
purl2repo/utils/: __init__.py  levenshtein_similarity.py
scripts/: benchmark.py  purl_spec_resolution_report.py  smoke_test.py
src/purl2repo/: __init__.py  api.py  cli.py  errors.py  models.py  settings.py  version.py
src/purl2repo/ecosystems/: __init__.py  base.py  cargo.py  golang.py  maven.py  npm.py  nuget.py  pypi.py
src/purl2repo/hosts/: __init__.py  base.py  bitbucket.py  generic_git.py  github.py  gitlab.py
src/purl2repo/http/: __init__.py  client.py  retry.py
src/purl2repo/purl/: __init__.py  normalize.py  parse.py  validate.py
src/purl2repo/resolution/: __init__.py  cache.py  canonicalize.py  deps_dev.py  engine.py  evidence.py  scorer.py  scraper.py
src/purl2repo/utils/: text.py  urls.py  versions.py
tests/: __init__.py  conftest.py  test_cargo_parser.py  test_npm_parser.py  test_pypi_parser.py
tests/fixtures/cargo/: rand.json
tests/fixtures/maven/: log4j-core-metadata.xml  log4j-core.pom
tests/fixtures/npm/: react.json
tests/fixtures/purl_spec/: README.md
tests/fixtures/pypi/: requests.json
tests/integration/: test_live_cargo.py  test_live_golang.py  test_live_huggingface.py  test_live_maven.py  test_live_npm.py  test_live_nuget.py  test_live_pypi.py
tests/unit/: test_api.py  test_api_cli_edges.py  test_cli.py  test_deps_dev_fallback.py  test_ecosystem_edges.py  test_evidence.py  test_fallback_scraper.py  test_http_cache.py  test_misc_contracts.py  test_purl_parse.py  test_purl_spec_examples.py  test_purl_validate.py  test_release_links.py  test_scoring.py  test_tiered_purl_support.py  test_url_normalization.py
venv_purl/: pyvenv.cfg
